Bug 488354 - "Enable" and "Turn Off" buttons should act on selected entries only
Summary: "Enable" and "Turn Off" buttons should act on selected entries only
Status: RESOLVED FIXED
Alias: None
Product: kdebugsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.05.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Laurent Montel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-06-11 13:56 UTC by Massimiliano L
Modified: 2024-06-11 19:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Massimiliano L 2024-06-11 13:56:01 UTC
SUMMARY
When selecting one of multiple entries in the KDebugSettings / KDE Application tab, the enable and turn off buttons always act on all the entries returned by the search field, regardless of which entries have been selected. This behaviour goes against what I think is be a normal user's expectation (in case it's intentional, I can elaborate more on why I think is a questionable UI choice).

STEPS TO REPRODUCE
1. Open KDebugSettings
2. Select one or more entries
3. Click on "Enable All Debug" or "Turn Off All Messages"

OBSERVED RESULT
All the entries matching the search are toggled. Selection is irrelevant.

EXPECTED RESULT
Only the selected entries are toggled.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora 40
KDE Plasma Version: 6.0.5 
KDE Frameworks Version: 6.3.0 
Qt Version: 6.7.1
Comment 1 Laurent Montel 2024-06-11 15:41:49 UTC
ok I see
I will look at it.
Comment 2 Laurent Montel 2024-06-11 19:04:48 UTC
Git commit 0fb83e538987503d5e1af9465374b93372e03a14 by Laurent Montel.
Committed on 11/06/2024 at 19:03.
Pushed by mlaurent into branch 'master'.

Fix 488354:  "Enable" and "Turn Off" buttons should act on selected entries only
FIXED-IN: 24.08.0

M  +25   -29   src/widgets/kdeapplicationtreeview.cpp
M  +1    -0    src/widgets/kdeapplicationtreeview.h

https://invent.kde.org/utilities/kdebugsettings/-/commit/0fb83e538987503d5e1af9465374b93372e03a14