Fix 488354:  "Enable" and "Turn Off" buttons should act on selected entries only

BUG: 488354
FIXED-IN: 24.08.0